序列化表单

--- a/message_board/view/submit.html
+++ b/message_board/view/submit.html
@@ -8,12 +8,13 @@
   <bod>
     <div class="form-container">
       <form class="msg-form">
-        <input type="text" placeholder="用户名" class="msg-author">
-        <textarea type="text" class="msg-content" placeholder="留言内容"></textarea>
+        <input type="text" placeholder="用户名" class="msg-author" name="author">
+        <textarea type="text" class="msg-content" placeholder="留言内容" name="content"></textarea>
         <div class="msg-btn">
           <div class="submit-btn">提交</div>
         </div>
       </form>
     </div>
+    <script src="../public/script/submit_msg.js"></script>
   </bod>
 </head>
