--- a/message_board/view/index.html
+++ b/message_board/view/index.html
@@ -9,7 +9,7 @@
 	<header>
 		<h1 class="head-title">留言板</h1>
 				<!-- 跳转至发布留言表达页面 -->
-				<div class="submit-btn">发布留言</div>
+				<div class="submit-btn to-form">发布留言</div>
 	</header>
 	<mian>
 		<div class="list-container">
