--- a/message_board/view/submit.html
+++ b/message_board/view/submit.html
@@ -8,10 +8,10 @@
   <bod>
     <div class="form-container">
       <form class="msg-form">
-        <input type="text" placeholder="用户名" class="msg-author" name="author">
-        <textarea type="text" class="msg-content" placeholder="留言内容" name="content"></textarea>
+        <input type="text" placeholder="用户名" class="msg-form-author" name="author">
+        <textarea type="text" class="msg-form-content" placeholder="留言内容" name="content"></textarea>
         <div class="msg-btn">
-          <div class="submit-btn">提交</div>
+          <div class="submit-form-btn submit-btn">提交</div>
         </div>
       </form>
     </div>
