完成留言板

--- a/message_board/view/submit.html
+++ b/message_board/view/submit.html
@@ -8,9 +8,9 @@
   <bod>
     <div class="form-container">
       <form class="msg-form">
-        <input type="text" placeholder="用户名" class="msg-author" name="author" required>
-        <textarea type="text" class="msg-content" placeholder="留言内容" name="content" required></textarea>
-        <div class="msg-btn">
+        <input type="text" placeholder="用户名" class="msg-form-author" name="author" required>
+        <textarea type="text" class="msg-form-content" placeholder="留言内容" name="content" required></textarea>
+        <div class="msg-form-btn">
           <div class="submit-btn">提交</div>
         </div>
       </form>
